--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://ahakem.github.io/hakim/",
+  "homepage": "https://hakim.uipia.com",
   "private": true,
   "dependencies": {
     "react": "^16.12.0",
