--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "hakim192.jpg",
+      "src": "hakim192.png",
       "type": "image/jpg",
       "sizes": "192x192"
     },
